# EmscriptenCMakeMinimal

./: CMakeLists.txt  EmscriptenBuild.bat  EmscriptenBuildWin.bat  README.md  appveyor.yml
Sources/WebApp/: main.cpp
Sources/WebSite/: WebSite.html  index.html
